--- a/EFL Grounds/Base.lproj/Main.storyboard
+++ b/EFL Grounds/Base.lproj/Main.storyboard
@@ -482,7 +482,7 @@
                                 <rect key="frame" x="16" y="64" width="343" height="728"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Football League Ground Guide.
+                                <mutableString key="text">Football League Ground Guide.
 A fan travel guide to all 72 EFL grounds.
 
 This app aims to provide travel information for fans travelling to Football League matches.    
@@ -502,7 +502,7 @@ www.phone-app.co.uk
 
 To get in touch please use the contact form on the website.
 
-© 2012-2020.</string>
+© 2012-2021.</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
