--- a/EFL Grounds/Base.lproj/Main.storyboard
+++ b/EFL Grounds/Base.lproj/Main.storyboard
@@ -59,13 +59,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="hybrid" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bPW-gU-gi0">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bPW-gU-gi0">
                                 <rect key="frame" x="0.0" y="88" width="428" height="755"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jsB-6X-acl"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bPW-gU-gi0" firstAttribute="top" secondItem="jsB-6X-acl" secondAttribute="top" id="Nt1-a9-GKv"/>
+                            <constraint firstItem="bPW-gU-gi0" firstAttribute="leading" secondItem="jsB-6X-acl" secondAttribute="leading" id="ciK-OJ-xJS"/>
+                            <constraint firstItem="bPW-gU-gi0" firstAttribute="bottom" secondItem="jsB-6X-acl" secondAttribute="bottom" id="dYg-Pr-DOF"/>
+                            <constraint firstItem="bPW-gU-gi0" firstAttribute="trailing" secondItem="jsB-6X-acl" secondAttribute="trailing" id="i8J-Bz-qXd"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="mapIconSet" selectedImage="mapIconSet" id="wVD-Xg-RH7"/>
                     <connections>
@@ -367,9 +372,7 @@
                                     <constraint firstAttribute="height" constant="40" id="Xbl-dM-pA3"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="SUPPORT US">
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
+                                <buttonConfiguration key="configuration" style="plain" image="SupportUs"/>
                                 <connections>
                                     <segue destination="Ywd-O1-d41" kind="show" id="IHl-T3-KNe"/>
                                 </connections>
@@ -402,6 +405,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="SupportUsBtn" destination="L7y-2O-0KS" id="ey6-kz-dEX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -599,12 +605,12 @@ A fan travel guide to all 72 EFL grounds.</string>
         <!--Support Us-->
         <scene sceneID="utX-bP-Lwd">
             <objects>
-                <viewController id="Ywd-O1-d41" sceneMemberID="viewController">
+                <viewController id="Ywd-O1-d41" customClass="SupportUsViewController" customModule="EFL_Grounds" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2iZ-W2-cLR">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BJu-9K-hoV">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="BJu-9K-hoV">
                                 <rect key="frame" x="20" y="108" width="388" height="230"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -645,18 +651,39 @@ Please note this is just a digital tip no extra functionality will be unlocked, 
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Send Tip"/>
+                                <connections>
+                                    <action selector="purchaseTip:" destination="Ywd-O1-d41" eventType="touchUpInside" id="UWj-Wg-zDW"/>
+                                </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wc6-hc-DTR">
+                                <rect key="frame" x="0.0" y="88" width="428" height="804"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="OD3-r6-oM8">
+                                        <rect key="frame" x="195.66666666666666" y="383.66666666666669" width="37" height="37"/>
+                                        <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="OD3-r6-oM8" firstAttribute="centerX" secondItem="Wc6-hc-DTR" secondAttribute="centerX" id="DtT-x5-QO4"/>
+                                    <constraint firstItem="OD3-r6-oM8" firstAttribute="centerY" secondItem="Wc6-hc-DTR" secondAttribute="centerY" id="X1k-0N-B8E"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="EU5-i1-SV7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Wc6-hc-DTR" firstAttribute="top" secondItem="EU5-i1-SV7" secondAttribute="top" id="AVd-WW-NWg"/>
+                            <constraint firstItem="Wc6-hc-DTR" firstAttribute="bottom" secondItem="EU5-i1-SV7" secondAttribute="bottom" id="Hyn-iV-DE8"/>
                             <constraint firstItem="Rrs-Ot-NIS" firstAttribute="top" secondItem="16Z-24-2sp" secondAttribute="bottom" constant="10" id="Kgc-AS-y3u"/>
                             <constraint firstItem="16Z-24-2sp" firstAttribute="top" secondItem="beC-Lz-TIy" secondAttribute="bottom" constant="10" id="Tbb-MD-Qnh"/>
                             <constraint firstItem="BJu-9K-hoV" firstAttribute="top" secondItem="EU5-i1-SV7" secondAttribute="top" constant="20" id="Tee-FP-B3c"/>
+                            <constraint firstItem="Wc6-hc-DTR" firstAttribute="trailing" secondItem="EU5-i1-SV7" secondAttribute="trailing" id="Tt9-aO-I4x"/>
                             <constraint firstItem="16Z-24-2sp" firstAttribute="centerX" secondItem="2iZ-W2-cLR" secondAttribute="centerX" id="Uih-7t-Oxl"/>
                             <constraint firstItem="beC-Lz-TIy" firstAttribute="centerX" secondItem="2iZ-W2-cLR" secondAttribute="centerX" id="arN-1q-qza"/>
                             <constraint firstItem="beC-Lz-TIy" firstAttribute="top" secondItem="BJu-9K-hoV" secondAttribute="bottom" constant="10" id="bZ2-wX-5TU"/>
                             <constraint firstItem="BJu-9K-hoV" firstAttribute="leading" secondItem="EU5-i1-SV7" secondAttribute="leading" constant="20" id="e2J-vJ-cIa"/>
+                            <constraint firstItem="Wc6-hc-DTR" firstAttribute="leading" secondItem="EU5-i1-SV7" secondAttribute="leading" id="jHc-Ob-IR6"/>
                             <constraint firstItem="8eD-rw-yA1" firstAttribute="centerX" secondItem="2iZ-W2-cLR" secondAttribute="centerX" id="mhm-Qu-dti"/>
                             <constraint firstItem="EU5-i1-SV7" firstAttribute="trailing" secondItem="BJu-9K-hoV" secondAttribute="trailing" constant="20" id="nMc-nA-etm"/>
                             <constraint firstItem="Rrs-Ot-NIS" firstAttribute="centerX" secondItem="2iZ-W2-cLR" secondAttribute="centerX" id="o72-Wh-Ygu"/>
@@ -664,6 +691,13 @@ Please note this is just a digital tip no extra functionality will be unlocked, 
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Support Us" id="B1a-IS-qsg"/>
+                    <connections>
+                        <outlet property="IAPLoadingView" destination="Wc6-hc-DTR" id="3UI-GY-pbi"/>
+                        <outlet property="ProductDetail" destination="16Z-24-2sp" id="5Hi-Mu-wkX"/>
+                        <outlet property="ProductPrice" destination="Rrs-Ot-NIS" id="Bh5-xs-46s"/>
+                        <outlet property="ProductPurchaseBtn" destination="8eD-rw-yA1" id="UKp-fr-OYb"/>
+                        <outlet property="ProductTitle" destination="beC-Lz-TIy" id="g7I-lg-ex5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZyB-NP-ecY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -678,6 +712,7 @@ Please note this is just a digital tip no extra functionality will be unlocked, 
         <image name="ChampButton" width="230" height="40"/>
         <image name="LeagueOneButton" width="230" height="40"/>
         <image name="LeagueTwoButton" width="230" height="40"/>
+        <image name="SupportUs" width="335" height="40"/>
         <image name="aboutIcon" width="30" height="30"/>
         <image name="background" width="2000" height="2829"/>
         <image name="fixturesIconSet" width="23" height="23"/>
